# pytelnetdevice

./: README.md  pyproject.toml
examples/: basic.py  connection_context.py  customization.py  semaphore.py
pytelnetdevice/: __init__.py
