[project]
name = "pytelnetdevice"
version = "0.1.0"
description = "Base building block for libraries designed to communicate with Telnet-based devices"
readme = "README.md"
authors = [
    {name = "Sam Stenvall", email = "sam.stenvall@nitor.com"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
